--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,9 @@ html{
     box-sizing: border-box;
 }
 body{
-    background-color: black;
+    font-family: sans-serif;
+    background-color: rgb(0, 0, 0);
+    
 }
 header{
     padding: 3rem;
@@ -25,23 +27,128 @@ header li a{
     color: white;
     text-decoration: none;
     margin-right: 2rem;
-    font-size: 2rem;
+    font-size: 1.5rem;
+}
+
+header li a:hover {
+    text-decoration-color: #4feef6;
+    text-decoration-line: overline;
 }
 
 header button{
-    padding: 1rem 3rem;
+    padding: 1rem 4rem;
     border-radius: 1rem;
     border: none;
     background-color: #4feef6;
-    font-size: 1.5rem;
+    font-size: 1rem;
+    cursor: pointer;
+    transition: all 2s;
 }
-.modal-container{
+
+header button:hover {
+    background-color: #0c9fa7;
+    color: white;
+}
+
+
+
+@keyframes bounce {
+    0% {
+        transform: translateY(-400px);
+        opacity: 0;
+    }
+
+    50%{
+        transform: translateY(20px);
+        opacity: 0.64;
+    }
+
+    70%{
+        transform: translateY(-20px);
+    }
+}
+.modal, .logIn{
     background-color: white;
     display: flex;
     align-items: center;
     justify-content: center;
     position: absolute;
-    left: 50%;
-    top: 50%;
+    left: 30%;
+    top: 20%;
     padding: 3rem;
+    border-radius: 1rem;
+    box-shadow: -5px -5px 15px #0c9fa7;
+    z-index: 10;
+    transition: all 2s;
+}
+
+.hidden {
+    display: none;
+}
+
+.times{
+    position: absolute;
+    background:none;
+    top: 1rem;
+    right: 3rem;
+    font-size: 3rem;
+    border: none;
+    color: red;
+    cursor: pointer;
+}
+
+
+label{
+    text-align: center;
+    margin: 1rem;
+    color: gray;
+}
+
+form {
+    padding: 1rem;
+}
+
+form input  {
+    width: 100%;
+    padding: 1rem;
+    display: block;
+    margin: 1rem;
+}
+
+
+form button{
+    background-color: #4feef6;
+    border: none;
+    border-radius: .5rem;
+    color: black;
+    font-size: 1rem;
+    padding: 1rem 10rem;
+    display: block;
+    width: 100%;
+    cursor: pointer;
+    animation: bounce 5s ease;
+    margin: 1rem;
+}
+
+h1{
+    font-size: 2rem;
+}
+
+.overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.3);
+    z-index: 5;
+    backdrop-filter: blur(9px);
+    
+}
+
+#headerOne{
+    color: white;
+    font-size: 2rem;
+    margin-top: 10rem;
+    float: right;
 }
